--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
+    <link rel="icon" href="images/">
 
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -555,7 +556,7 @@
       <div class="col-md-8 col-sm-8 col-xs-8">
         <p>Copyright © 2019 Steak House Company 
         
-        - Design: <a rel="nofollow" class="designed-by" href="https://www.tooplate.com">Tooplate</a></p>
+        </p>
       </div>  
 
       <div class="col-md-4 col-sm-4 text-right">
