--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
     <div class="row">
 
       <div class="col-md-8 col-sm-8 col-xs-8">
-        <p>Copyright © 2019 Steak House Company 
+        <p>Copyright © 2024 
         
         </p>
       </div>  
